Start wiring things together