@@ -1,6 +1,7 @@
 package uk.co.bigsoft.filesucker;
 
 import java.net.JarURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.LinkedList;
 import java.util.jar.Attributes;
@@ -13,6 +14,9 @@ import uk.co.bigsoft.filesucker.config.ConfigView;
 import uk.co.bigsoft.filesucker.credits.CreditsController;
 import uk.co.bigsoft.filesucker.credits.CreditsModel;
 import uk.co.bigsoft.filesucker.credits.CreditsView;
+import uk.co.bigsoft.filesucker.task.TaskController;
+import uk.co.bigsoft.filesucker.task.TaskModel;
+import uk.co.bigsoft.filesucker.task.TaskView;
 import uk.co.bigsoft.filesucker.tools.ToolsController;
 import uk.co.bigsoft.filesucker.tools.ToolsModel;
 import uk.co.bigsoft.filesucker.tools.ToolsView;
@@ -36,13 +40,58 @@ public class FileSucker {
 	public static TaskScreen taskScreen = null;
 	public static TransferScreen transferScreen = null;
 	public static CreditScreen creditScreen = null;
-	public static ToolsScreen toolsScreen = null;
+	// public static ToolsScreen toolsScreen = null;
 
 	public static void main(String args[]) {
 
+		setUpVersion();
+
+		ConfigSaver cs = new ConfigSaver();
+
+		ConfigModel configModel = cs.load();
+		CreditsModel creditsModel = new CreditsModel();
+		LaunchProfileModel launchProfileModel = new LaunchProfileModel();
+		ToolsModel toolsModel = new ToolsModel();
+		TaskModel taskModel = new TaskModel();
+
+		taskModel.setDirectory(configModel.getBaseDir());
+
+		ConfigView configView = new ConfigView();
+		CreditsView creditsView = new CreditsView();
+		LaunchProfileView launchProfileView = new LaunchProfileView();
+		ToolsView toolsView = new ToolsView(launchProfileView);
+		TaskView taskView = new TaskView();
+
+		ConfigController configController = new ConfigController(configModel, configView);
+		CreditsController creditsController = new CreditsController(creditsModel, creditsView);
+		LaunchProfileController launchProfileController = new LaunchProfileController(launchProfileModel,
+				launchProfileView);
+		ToolsController toolsController = new ToolsController(toolsModel, toolsView);
+		TaskController taskController = new TaskController(taskModel, taskView);
+
+		configController.initController();
+		creditsController.initController();
+		launchProfileController.initController(toolsModel);
+		toolsController.initController(configModel);
+		taskController.initController(configModel, toolsModel);
+
+		// Build tabs
+		activeFileSuckerThreads = new LinkedList<SuckerThread>();
+		configData = new ConfigData();
+		// configScreen = new ConfigScreen();
+		taskScreen = new TaskScreen();
+		transferScreen = new TransferScreen();
+		creditScreen = new CreditScreen();
+		// toolsScreen = new ToolsScreen();
+
+		// Open window
+		new FileSuckerFrame(taskView, configView, creditsView, toolsView);
+	}
+
+	private static void setUpVersion() {
 		// Read version numbers from the manifest
 		try {
-			URL url = new URL("jar:file:FileSucker.jar!/META-INF/MANIFEST.MF");
+			URL url = URI.create("jar:file:FileSucker.jar!/META-INF/MANIFEST.MF").toURL();
 			JarURLConnection jarConnection = (JarURLConnection) url.openConnection();
 			Manifest manifest = jarConnection.getManifest();
 			Attributes attr = manifest.getMainAttributes();
@@ -52,41 +101,6 @@ public class FileSucker {
 			version = "dev";
 			versionDate = "today";
 		}
-
-		ConfigSaver cs = new ConfigSaver();
-		
-		ConfigModel configModel = cs.load();
-		CreditsModel creditsModel = new CreditsModel();
-		LaunchProfileModel launchProfileModel = new LaunchProfileModel();
-		ToolsModel toolsModel = new ToolsModel();
-		
-		ConfigView configView = new ConfigView();
-		CreditsView creditsView = new CreditsView();
-		LaunchProfileView launchProfileView = new LaunchProfileView();
-		ToolsView toolsView = new ToolsView(launchProfileView);
-		
-		ConfigController configController = new ConfigController(configModel, configView);
-		CreditsController creditsController = new CreditsController(creditsModel, creditsView);
-		LaunchProfileController launchProfileController = new LaunchProfileController(launchProfileModel,
-				launchProfileView);
-		ToolsController toolsController = new ToolsController(toolsModel, toolsView);
-
-		configController.initController();
-		creditsController.initController();
-		launchProfileController.initController(toolsModel);
-		toolsController.initController();
-
-		// Build tabs
-		activeFileSuckerThreads = new LinkedList<SuckerThread>();
-		configData = new ConfigData();
-		// configScreen = new ConfigScreen();
-		taskScreen = new TaskScreen();
-		transferScreen = new TransferScreen();
-		creditScreen = new CreditScreen();
-		toolsScreen = new ToolsScreen();
-
-		// Open window
-		new FileSuckerFrame(configView, creditsView, toolsView);
 	}
 
 }
